--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,10 +88,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Garden/Garden_14
+LastLevel=/Game/Maps/WIP/Daniil/Garden_15
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -852,7 +852,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps/Garden
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -915,7 +915,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Garden
+UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -925,7 +925,7 @@ GenericOpen=../../../../BlockRoller/BlockRoller2D/Content/
 GenericSave=../../../../BlockRoller/BlockRoller2D/Content/
 MeshImportExport=../../../../BlockRoller/BlockRoller2D/Content/
 WorldRoot=../../../../BlockRoller/BlockRoller2D/Content/
-Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Garden
+Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
 Project=F:/UE_4.21/
 
 [ModuleFileTracking]
@@ -1568,18 +1568,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Garden/Garden_14
-MRUItem1=/Game/Maps/Garden/Garden_13
-MRUItem2=/Game/Maps/Garden/Garden_12
-MRUItem3=/Game/Maps/Garden/Garden_11
-MRUItem4=/Game/Maps/Garden/Garden_10
-MRUItem5=/Game/Maps/Garden/Garden_9
-MRUItem6=/Game/Maps/Garden/Garden_8
-MRUItem7=/Game/Maps/Garden/Garden_7
-MRUItem8=/Game/Maps/Garden/Garden_6
-MRUItem9=/Game/Maps/Garden/Garden_5
-MRUItem10=/Game/Maps/Garden/Garden_4
-MRUItem11=/Game/Maps/Garden/Garden_3
+MRUItem0=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem1=/Game/Maps/WIP/Garden_14
+MRUItem2=/Game/Maps/Garden/Garden_14
+MRUItem3=/Game/Maps/Garden/Garden_13
+MRUItem4=/Game/Maps/Garden/Garden_12
+MRUItem5=/Game/Maps/Garden/Garden_11
+MRUItem6=/Game/Maps/Garden/Garden_10
+MRUItem7=/Game/Maps/Garden/Garden_9
+MRUItem8=/Game/Maps/Garden/Garden_8
+MRUItem9=/Game/Maps/Garden/Garden_7
+MRUItem10=/Game/Maps/Garden/Garden_6
+MRUItem11=/Game/Maps/Garden/Garden_5
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1606,6 +1606,13 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
 RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
@@ -1619,13 +1626,6 @@ RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
