--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,10 +88,13 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/WIP/Daniil/Garden_15
+LastLevel=/Game/Maps/WIP/Normal/Normal_1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelPack.W_LevelPack
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_MapButton.W_MapButton
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -742,6 +745,30 @@ Background_Sprite_Blueprint_C.Cooking=True
 Background_Sprite_Blueprint_C.Replication=True
 Background_Sprite_Blueprint_C.Input=True
 Background_Sprite_Blueprint_C.Actor=True
+BP_SaveLevel_C.Default=True
+BP_MovingPlatform_OneIteration_C.TransformCommon=True
+BP_MovingPlatform_OneIteration_C.Default=True
+BP_MovingPlatform_OneIteration_C.Rendering=True
+BP_MovingPlatform_OneIteration_C.Replication=True
+BP_MovingPlatform_OneIteration_C.Input=True
+BP_MovingPlatform_OneIteration_C.Actor=True
+BP_Portal_C.TransformCommon=True
+BP_Portal_C.Default=True
+BP_Portal_C.Rendering=True
+BP_Portal_C.Replication=True
+BP_Portal_C.Input=True
+BP_Portal_C.Actor=True
+W_MapButton_C.Layout=True
+W_MapButton_C.Default=True
+W_MapButton_C.Appearance=True
+W_MapButton_C.Input=True
+W_MapButton_C.Interaction=True
+W_MapButton_C.Behavior=True
+W_MapButton_C.Render Transform=True
+W_MapButton_C.Performance=True
+W_MapButton_C.Clipping=True
+W_MapButton_C.Navigation=True
+W_MapButton_C.Designer=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -770,7 +797,7 @@ SceneComponent=
 ActorComponent=
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -782,26 +809,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Garden/Garden_2
-MRUItem1=/Game/Maps/Garden/Garden_1
-MRUItem2=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem3=/Game/Blueprints/Backgrounds/BP_Background
-MRUItem4=/Game/Blueprints/BP_Background
-MRUItem5=/Game/Blueprints/E_MapSkins
-MRUItem6=/Game/Blueprints/Widgets/W_SeasonButton
-MRUItem7=/Game/Blueprints/Widgets/W_Menu
-MRUItem8=/Game/Blueprints/Widgets/W_LevelChooser
-MRUItem9=/Game/Blueprints/LevelStuff/BP_MovingPlatform
-MRUItem10=/Game/Blueprints/LevelStuff/BP_Platform
-MRUItem11=/Game/Blueprints/Widgets/W_LoadingWidget
-MRUItem12=/Game/Blueprints/Widgets/W_InfinityMode
-MRUItem13=/Game/Blueprints/Widgets/W_LevelPack
-MRUItem14=/Game/Blueprints/GlobalFunctions
-MRUItem15=/Game/Blueprints/Widgets/W_InfinityLooseScreen
-MRUItem16=/Game/Blueprints/Widgets/W_WinScreen
-MRUItem17=/Game/Blueprints/Widgets/W_Info
-MRUItem18=/Game/Blueprints/Widgets/W_InfinityInterface
-MRUItem19=/Game/Blueprints/Widgets/W_LooseScreen
+MRUItem0=/Game/Blueprints/Widgets/W_MapButton
+MRUItem1=/Game/Blueprints/Widgets/W_LevelPack
+MRUItem2=/Game/Blueprints/Widgets/W_Menu
+MRUItem3=/Game/Maps/WIP/Normal/Normal_1
+MRUItem4=/Game/Maps/IceHill/IceHill_1
+MRUItem5=/Game/Maps/WIP/Easy/Garden_1
+MRUItem6=/Game/Maps/WIP/WIP_5
+MRUItem7=/Game/Maps/WIP/WIP_6
+MRUItem8=/Game/Maps/WIP/WIP_4
+MRUItem9=/Game/Maps/WIP/Garden_14
+MRUItem10=/Game/Maps/Garden/Garden_14
+MRUItem11=/Game/Maps/WIP/Normal/Garden_12
+MRUItem12=/Game/Maps/Garden/Garden_13
+MRUItem13=/Game/Maps/Garden/Garden_12
+MRUItem14=/Game/Maps/Garden/Garden_11
+MRUItem15=/Game/Maps/Garden/Garden_10
+MRUItem16=/Game/Maps/Garden/Garden_9
+MRUItem17=/Game/Maps/Garden/Garden_8
+MRUItem18=/Game/Maps/Garden/Garden_7
+MRUItem19=/Game/Maps/Garden/Garden_6
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -852,7 +879,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1568,18 +1595,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem1=/Game/Maps/WIP/Garden_14
-MRUItem2=/Game/Maps/Garden/Garden_14
-MRUItem3=/Game/Maps/Garden/Garden_13
-MRUItem4=/Game/Maps/Garden/Garden_12
-MRUItem5=/Game/Maps/Garden/Garden_11
-MRUItem6=/Game/Maps/Garden/Garden_10
-MRUItem7=/Game/Maps/Garden/Garden_9
-MRUItem8=/Game/Maps/Garden/Garden_8
-MRUItem9=/Game/Maps/Garden/Garden_7
-MRUItem10=/Game/Maps/Garden/Garden_6
-MRUItem11=/Game/Maps/Garden/Garden_5
+MRUItem0=/Game/Maps/WIP/Normal/Normal_1
+MRUItem1=/Game/Maps/IceHill/IceHill_1
+MRUItem2=/Game/Maps/WIP/Easy/Garden_1
+MRUItem3=/Game/Maps/WIP/WIP_5
+MRUItem4=/Game/Maps/WIP/Extreme/WIP_6
+MRUItem5=/Game/Maps/WIP/WIP_6
+MRUItem6=/Game/Maps/WIP/test
+MRUItem7=/Game/Maps/WIP/WIP_4
+MRUItem8=/Game/Maps/WIP/Hard/Garden_14
+MRUItem9=/Game/Maps/WIP/Garden_14
+MRUItem10=/Game/Maps/WIP/Normal/Garden_14
+MRUItem11=/Game/Maps/Garden/Garden_14
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1654,8 +1681,7 @@ RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech
 /Game/Maps/Garden=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/IceHill=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/InfiniteModes=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
-/Game/Maps/LavaLake=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
-/Game/Maps/NeonHell=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
+/Game/Blueprints/Backgrounds=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
 /Game/Maps/WIP=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/WIP/Demonic=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/WIP/Easy=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
@@ -1663,5 +1689,6 @@ RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech
 /Game/Maps/WIP/Hard=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/WIP/Normal=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Movies=(R=1.000000,G=0.085798,B=0.000000,A=1.000000)
+/Game/Maps/WIP/Daniil=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 
 
