--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,10 +88,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/WIP/Daniil/Garden_15
+LastLevel=/Game/Maps/WIP/Daniil/Garden_16
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -1568,18 +1568,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem1=/Game/Maps/WIP/Garden_14
-MRUItem2=/Game/Maps/Garden/Garden_14
-MRUItem3=/Game/Maps/Garden/Garden_13
-MRUItem4=/Game/Maps/Garden/Garden_12
-MRUItem5=/Game/Maps/Garden/Garden_11
-MRUItem6=/Game/Maps/Garden/Garden_10
-MRUItem7=/Game/Maps/Garden/Garden_9
-MRUItem8=/Game/Maps/Garden/Garden_8
-MRUItem9=/Game/Maps/Garden/Garden_7
-MRUItem10=/Game/Maps/Garden/Garden_6
-MRUItem11=/Game/Maps/Garden/Garden_5
+MRUItem0=/Game/Maps/WIP/Daniil/Garden_16
+MRUItem1=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem2=/Game/Maps/WIP/Garden_14
+MRUItem3=/Game/Maps/Garden/Garden_14
+MRUItem4=/Game/Maps/Garden/Garden_13
+MRUItem5=/Game/Maps/Garden/Garden_12
+MRUItem6=/Game/Maps/Garden/Garden_11
+MRUItem7=/Game/Maps/Garden/Garden_10
+MRUItem8=/Game/Maps/Garden/Garden_9
+MRUItem9=/Game/Maps/Garden/Garden_8
+MRUItem10=/Game/Maps/Garden/Garden_7
+MRUItem11=/Game/Maps/Garden/Garden_6
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1606,13 +1606,15 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
 RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
@@ -1624,8 +1626,6 @@ RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
