--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/Maps/WIP/Daniil/Garden_16
+LastLevel=/Game/Maps/WIP/Daniil/Garden_18
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -742,6 +742,12 @@ Background_Sprite_Blueprint_C.Cooking=True
 Background_Sprite_Blueprint_C.Replication=True
 Background_Sprite_Blueprint_C.Input=True
 Background_Sprite_Blueprint_C.Actor=True
+BP_MovingPlatform_OneIteration_C.TransformCommon=True
+BP_MovingPlatform_OneIteration_C.Default=True
+BP_MovingPlatform_OneIteration_C.Rendering=True
+BP_MovingPlatform_OneIteration_C.Replication=True
+BP_MovingPlatform_OneIteration_C.Input=True
+BP_MovingPlatform_OneIteration_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1568,18 +1574,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/WIP/Daniil/Garden_16
-MRUItem1=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem2=/Game/Maps/WIP/Garden_14
-MRUItem3=/Game/Maps/Garden/Garden_14
-MRUItem4=/Game/Maps/Garden/Garden_13
-MRUItem5=/Game/Maps/Garden/Garden_12
-MRUItem6=/Game/Maps/Garden/Garden_11
-MRUItem7=/Game/Maps/Garden/Garden_10
-MRUItem8=/Game/Maps/Garden/Garden_9
-MRUItem9=/Game/Maps/Garden/Garden_8
-MRUItem10=/Game/Maps/Garden/Garden_7
-MRUItem11=/Game/Maps/Garden/Garden_6
+MRUItem0=/Game/Maps/WIP/Daniil/Garden_18
+MRUItem1=/Game/Maps/WIP/Daniil/Garden_17
+MRUItem2=/Game/Maps/M_Loading1
+MRUItem3=/Game/Maps/WIP/Daniil/Garden_16
+MRUItem4=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem5=/Game/Maps/WIP/Garden_14
+MRUItem6=/Game/Maps/Garden/Garden_14
+MRUItem7=/Game/Maps/Garden/Garden_13
+MRUItem8=/Game/Maps/Garden/Garden_12
+MRUItem9=/Game/Maps/Garden/Garden_11
+MRUItem10=/Game/Maps/Garden/Garden_10
+MRUItem11=/Game/Maps/Garden/Garden_9
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1606,15 +1612,19 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
 RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
@@ -1622,10 +1632,6 @@ RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1_Sprite.cl
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/game_background_1_Sprite.game_background_1_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1.clouds_1;
 RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
