Added money interactable, added menu background, fixed some bugs with saves and starting animation

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,19 +79,29 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
+MultipleInstanceLastHeight=1136
+MultipleInstanceLastWidth=640
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-4GJPE4Q
 LastExecutedLaunchName=DESKTOP-4GJPE4Q
 LastExecutedPIEPreviewDevice=
-DeviceToEmulate=
+DeviceToEmulate=iPhone5S
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=640
+NewWindowHeight=1136
+NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/WIP/Daniil/Garden_18
+LastLevel=/Game/Maps/M_Menu
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/Interface_MenuBG.Interface_MenuBG
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelPack.W_LevelPack
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Store.W_Store
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelChooser.W_LevelChooser
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -748,6 +758,129 @@ BP_MovingPlatform_OneIteration_C.Rendering=True
 BP_MovingPlatform_OneIteration_C.Replication=True
 BP_MovingPlatform_OneIteration_C.Input=True
 BP_MovingPlatform_OneIteration_C.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Film=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+CameraComponent.Physics=True
+CameraComponent.AssetUserData=True
+CameraComponent.Collision=True
+BP_Character_Main_C.LOD=True
+BP_Character_Main_C.Cooking=True
+REINST_BP_Character_Main_C_1033.Tick=True
+REINST_BP_Character_Main_C_1177.Tick=True
+REINST_BP_Character_Main_C_1750.Tick=True
+BP_SaveLevel_C.Default=True
+BP_FinishLine_C.Tick=True
+W_WinScreen_C.Default=True
+W_WinScreen_C.Appearance=True
+W_WinScreen_C.Designer=True
+W_WinScreen_C.Input=True
+W_WinScreen_C.Interaction=True
+W_WinScreen_C.Performance=True
+W_WinScreen_C.Layout=True
+W_WinScreen_C.Behavior=True
+W_WinScreen_C.Render Transform=True
+W_WinScreen_C.Clipping=True
+W_WinScreen_C.Navigation=True
+W_LooseScreen_C.Default=True
+W_LooseScreen_C.Appearance=True
+W_LooseScreen_C.Designer=True
+W_LooseScreen_C.Input=True
+W_LooseScreen_C.Interaction=True
+W_LooseScreen_C.Performance=True
+W_LooseScreen_C.Layout=True
+W_LooseScreen_C.Behavior=True
+W_LooseScreen_C.Render Transform=True
+W_LooseScreen_C.Clipping=True
+W_LooseScreen_C.Navigation=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+W_MapButton_C.Default=True
+W_MapButton_C.Appearance=True
+W_MapButton_C.Designer=True
+W_MapButton_C.Input=True
+W_MapButton_C.Interaction=True
+W_MapButton_C.Performance=True
+W_MapButton_C.Layout=True
+W_MapButton_C.Behavior=True
+W_MapButton_C.Render Transform=True
+W_MapButton_C.Clipping=True
+W_MapButton_C.Navigation=True
+EditorKeyboardShortcutSettings.3DTransformTrack=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.CameraCutTrack=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.UMGEditor=True
+BP_CirclePlatform_C.Tick=True
+BP_MovingPlatform_OneIteration_C.Tick=True
+BP_Money_C.Tick=True
+BP_Money_C.Default=True
+BP_Money_C.Rendering=True
+BP_Money_C.Replication=True
+BP_Money_C.Input=True
+BP_Money_C.Actor=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Events=True
+BP_Star_C.Tick=True
+BP_Money_C.TransformCommon=True
+BP_Key_C.Tick=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+BP_MenuBG_1_C.Tick=True
+BP_MenuBG_1_C.Default=True
+BP_MenuBG_1_C.Rendering=True
+BP_MenuBG_1_C.Replication=True
+BP_MenuBG_1_C.Input=True
+BP_MenuBG_1_C.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
+BP_MenuBG_1_C.TransformCommon=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -758,10 +891,10 @@ TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSet
 Widget=
 Visual=
 Button="\"Object.Appearance.WidgetStyle\" "
-ContentWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-PanelWidget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-Border="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
-SizeBox=
+ContentWidget="\"Object.Appearance.WidgetStyle\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" "
+Border="\"Object.Appearance.Background\" "
+SizeBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
 HorizontalBox=
 W_SeasonButton_C=
 UserWidget=
@@ -771,9 +904,19 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
+CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+BP_Character_Main_C=
+PaperCharacter=
+Character=
+Pawn=
+REINST_BP_Character_Main_C_1033="\"Object.Replication.ReplicatedMovement\" "
+REINST_BP_Character_Main_C_1177="\"Object.Replication.ReplicatedMovement\" "
+REINST_BP_Character_Main_C_1750="\"Object.Replication.ReplicatedMovement\" "
+BoxComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -788,26 +931,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Garden/Garden_2
-MRUItem1=/Game/Maps/Garden/Garden_1
-MRUItem2=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem3=/Game/Blueprints/Backgrounds/BP_Background
-MRUItem4=/Game/Blueprints/BP_Background
-MRUItem5=/Game/Blueprints/E_MapSkins
-MRUItem6=/Game/Blueprints/Widgets/W_SeasonButton
+MRUItem0=/Game/Blueprints/Widgets/W_LevelChooser
+MRUItem1=/Game/Blueprints/Backgrounds/BP_Background
+MRUItem2=/Game/Blueprints/Widgets/W_Store
+MRUItem3=/Game/Blueprints/Widgets/W_LevelPack
+MRUItem4=/Game/Blueprints/Backgrounds/Interface_MenuBG
+MRUItem5=/Game/Blueprints/Backgrounds/BP_MenuBG_1
+MRUItem6=/Game/Maps/M_Menu
 MRUItem7=/Game/Blueprints/Widgets/W_Menu
-MRUItem8=/Game/Blueprints/Widgets/W_LevelChooser
-MRUItem9=/Game/Blueprints/LevelStuff/BP_MovingPlatform
-MRUItem10=/Game/Blueprints/LevelStuff/BP_Platform
-MRUItem11=/Game/Blueprints/Widgets/W_LoadingWidget
-MRUItem12=/Game/Blueprints/Widgets/W_InfinityMode
-MRUItem13=/Game/Blueprints/Widgets/W_LevelPack
-MRUItem14=/Game/Blueprints/GlobalFunctions
-MRUItem15=/Game/Blueprints/Widgets/W_InfinityLooseScreen
-MRUItem16=/Game/Blueprints/Widgets/W_WinScreen
-MRUItem17=/Game/Blueprints/Widgets/W_Info
-MRUItem18=/Game/Blueprints/Widgets/W_InfinityInterface
-MRUItem19=/Game/Blueprints/Widgets/W_LooseScreen
+MRUItem8=/Game/Maps/M_Loading1
+MRUItem9=/Game/Blueprints/Widgets/W_LoadingWidget
+MRUItem10=/Game/Blueprints/Interactables/BP_Key
+MRUItem11=/Game/Blueprints/GlobalFunctions
+MRUItem12=/Game/Blueprints/Interactables/BP_Star
+MRUItem13=/Game/Blueprints/Interactables/BP_Money
+MRUItem14=/Game/Maps/WIP/Daniil/Garden_16
+MRUItem15=/Game/Maps/WIP/Daniil/Garden_17
+MRUItem16=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration
+MRUItem17=/Game/Blueprints/LevelStuff/BP_CirclePlatform
+MRUItem18=/Game/Maps/Garden/Garden_12
+MRUItem19=/Game/Maps/Garden/Garden_11
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -858,7 +1001,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
+ContentBrowserTab1.SelectedPaths=/Game/Maps/WIP/Daniil
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -903,6 +1046,15 @@ AssetDialog.CurrentViewType=1
 /Game/Blueprints/LevelStuff/BP_Platform.BP_Platform=1
 /Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform=1
 /Game/Blueprints/E_MapSkins.E_MapSkins=1
+/Game/Blueprints/BP_SaveLevel.BP_SaveLevel=1
+/Game/Blueprints/LevelStuff/BP_FinishLine.BP_FinishLine=1
+/Game/Blueprints/Widgets/W_MapButton.W_MapButton=1
+/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform=1
+/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration=1
+/Game/Blueprints/Backgrounds/BP_Background.BP_Background=1
+/Game/Blueprints/Interactables/BP_Money.BP_Money=1
+/Game/Blueprints/Interactables/BP_Star.BP_Star=1
+/Game/Blueprints/Interactables/BP_Key.BP_Key=1
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=OnePane
@@ -921,7 +1073,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
+UNR=../../../../BlockRoller/BlockRoller2D/Content/Maps/WIP/Daniil
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -1574,18 +1726,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/WIP/Daniil/Garden_18
-MRUItem1=/Game/Maps/WIP/Daniil/Garden_17
-MRUItem2=/Game/Maps/M_Loading1
-MRUItem3=/Game/Maps/WIP/Daniil/Garden_16
-MRUItem4=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem5=/Game/Maps/WIP/Garden_14
-MRUItem6=/Game/Maps/Garden/Garden_14
-MRUItem7=/Game/Maps/Garden/Garden_13
-MRUItem8=/Game/Maps/Garden/Garden_12
-MRUItem9=/Game/Maps/Garden/Garden_11
-MRUItem10=/Game/Maps/Garden/Garden_10
-MRUItem11=/Game/Maps/Garden/Garden_9
+MRUItem0=/Game/Maps/M_Menu
+MRUItem1=/Game/Maps/M_Loading1
+MRUItem2=/Game/Maps/WIP/Daniil/Garden_16
+MRUItem3=/Game/Maps/WIP/Daniil/Garden_17
+MRUItem4=/Game/Maps/Garden/Garden_12
+MRUItem5=/Game/Maps/Garden/Garden_11
+MRUItem6=/Game/Maps/Garden/Garden_10
+MRUItem7=/Game/Maps/Garden/Garden_1
+MRUItem8=/Game/Maps/WIP/Daniil/Garden_18
+MRUItem9=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem10=/Game/Maps/WIP/Garden_14
+MRUItem11=/Game/Maps/Garden/Garden_14
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1610,8 +1762,12 @@ ShowUnusedLayers=True
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
+CameraComponent=CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|ExposureAdvanced,CameraComponent.Lens.Lens|Exposure,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Misc,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,CameraComponent.Lens.Lens|Chromatic Aberration,CameraComponent.Lens.Lens|Dirt Mask,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Rendering Features.Rendering Features|Global Illumination,
+EdGraph=EdGraph.Inputs.InputArgument0,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Money.BP_Money;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
@@ -1630,8 +1786,6 @@ RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Bl
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1_Sprite.clouds_1_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/game_background_1_Sprite.game_background_1_Sprite;
-RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1.clouds_1;
-RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
@@ -1669,5 +1823,9 @@ RecentlyPlaced=/Game/MobileStarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 /Game/Maps/WIP/Hard=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Maps/WIP/Normal=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Movies=(R=1.000000,G=0.085798,B=0.000000,A=1.000000)
+/Game/Blueprints/Backgrounds=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+
+[DetailCategoriesAdvanced]
+Border.Appearance=True
 
 
